37-aws-eks/k8s-files/load-balancer-test/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
  labels:
    app: nginx-deployment
spec:
  replicas: 4
  selector:
    matchLabels:
      app: nginx-deployment
  template:
    metadata:
      labels:
        app: nginx-deployment
    spec:
      # 1. mount temporary shared directory, between the initContainer and NGINX
      volumes:
      - name: html-volume
        emptyDir: {}
      
      # 2. write the Node IP to index.html file before NGINX starts,
      # we use the K8s Downward API, which allows a running container
      # to query the K8s orchestrator for information about itself
      # and the environment it was scheduled onto
      containers:
      - image: nginx
        name: nginx
        ports:
        - containerPort: 80
        # 3. mount the generated HTML file into NGINX
        volumeMounts:
        - name: html-volume
          mountPath: /usr/share/nginx/html
