37-aws-eks/k8s-files/load-balancer-test/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-svc
  labels:
    app: nginx-deployment
spec:
  # type: ClusterIP  # default
  ports:
  - port: 80
    protocol: TCP
    targetPort: 80
  selector:
    app: nginx-deployment
